--- a/.env
+++ b/.env
@@ -1,2 +1,16 @@
 PORT=9654
 DB_URI=mongodb+srv://godwinide:0WDlkTGDtCCltuzs@cluster0.bikzofb.mongodb.net/AlphaCapitalXchange?retryWrites=true&w=majority
+
+
+server{
+    server_name alphakryptoxchange.us www.alphakryptoxchange.us;
+
+    location / {
+        proxy_pass http://localhost:9654; #whatever port your app runs on
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+}
