--- a/.env
+++ b/.env
@@ -14,3 +14,6 @@ server{
         proxy_cache_bypass $http_upgrade;
     }
 }
+
+
+sudo certbot --nginx -d alphakryptoxchange.us -d www.alphakryptoxchange.us
